# hugengine

./: .gitignore  .gitignore.swp  Cargo.toml  README.md  todo.md
scenes/: template.yaml  test.yaml
shaders/: .shader.frag.swp  shader.frag  shader.vert  shader2.frag
src/: color.rs  geospace.rs  lib.rs  material.rs  models.rs  shader_preprocessor.rs
src/models/: parser.rs
